--- a/valentine-2022/3-grammar-corrector/index.html
+++ b/valentine-2022/3-grammar-corrector/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="container">
       <h1>Romantic Grammar Corrector 💝</h1>
-      <p class="paragraph" id="paragraph">vAlEntINe's!</p>
+      <p class="paragraph" id="paragraph">HaPpY vAlEntINe's dAy!</p>
       <button id="btn" type="button">Correct Grammar</button>
     </div>
     <script src="index.js"></script>
