--- a/valentine-2022/3-grammar-corrector/index.html
+++ b/valentine-2022/3-grammar-corrector/index.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+  <svg id="top-wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+    <path
+      fill="#f0b9dd"
+      fill-opacity="1"
+      d="M0,288L48,277.3C96,267,192,245,288,202.7C384,160,480,96,576,85.3C672,75,768,117,864,133.3C960,149,1056,139,1152,154.7C1248,171,1344,213,1392,234.7L1440,256L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"
+      style="--darkreader-inline-fill: #54123d"
+      data-darkreader-inline-fill=""
+    ></path>
+  </svg>
+
   <head>
     <title>Valentine's Challenge Week 💘</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -16,6 +26,20 @@
       <p class="paragraph" id="paragraph">HaPpY vAlEntINe's dAy!</p>
       <button id="btn" type="button">Correct Grammar</button>
     </div>
+
+    <svg
+      id="bottom-wave"
+      xmlns="http://www.w3.org/2000/svg"
+      viewBox="0 0 1440 320"
+    >
+      <path
+        fill="#f0b9dd"
+        fill-opacity="1"
+        d="M0,160L48,133.3C96,107,192,53,288,74.7C384,96,480,192,576,213.3C672,235,768,181,864,138.7C960,96,1056,64,1152,85.3C1248,107,1344,181,1392,218.7L1440,256L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+        style="--darkreader-inline-fill: #54123d"
+        data-darkreader-inline-fill=""
+      ></path>
+    </svg>
     <script src="index.js"></script>
   </body>
 </html>
