--- a/valentine-2022/5-heart-customiser/index.html
+++ b/valentine-2022/5-heart-customiser/index.html
@@ -8,10 +8,14 @@
       href="https://fonts.googleapis.com/css2?family=Karla:wght@500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link rel="stylesheet" href="index.css" />
   </head>
   <body class="flex">
-    <div id="heart" class="heart"></div>
+    <div id="heart" class="heart animate__animated"></div>
     <button id="btn">Change</button>
     <script src="index.js"></script>
   </body>
