--- a/earth-day-2022/2-i-can-recycle/index.html
+++ b/earth-day-2022/2-i-can-recycle/index.html
@@ -28,7 +28,10 @@
         <option value="📦">📦 cardboard</option>
       </select>
     </div>
-    <button class="btn" id="recycle-btn">Recycle</button>
+    <div class="buttons">
+      <button class="btn" id="recycle-btn">Recycle</button>
+      <button class="btn" id="empty-btn">Empty</button>
+    </div>
     <div class="recycle-bin center" id="recycle-bin"></div>
     <p id="info-paragraph">Recycled items will appear above ⬆️</p>
     <script src="index.js"></script>
