--- a/earth-day-2022/3-green-points/index.html
+++ b/earth-day-2022/3-green-points/index.html
@@ -14,7 +14,7 @@
   </head>
   <body class="center">
     <div id="btns-container" class="btns-container center"></div>
-    <p id="points-p" class="points-p">0 points today!</p>
+    <p id="points-p" class="points-p">Points: 0, Activities: 0</p>
     <script src="index.js"></script>
   </body>
 </html>
