--- a/earth-day-2022/4-climate-pledge/index.html
+++ b/earth-day-2022/4-climate-pledge/index.html
@@ -10,9 +10,9 @@
         <h1>My climate pledge 🌳</h1>
         <form id="form">
             <label for="name">Name:</label>
-            <input id="name" type="text" id="name" name="name">
+            <input id="name" type="text" id="name" name="name" required>
             <label for="email">Email:</label>
-            <input id="email" type="email" id="email" name="email">
+            <input id="email" type="email" id="email" name="email" required>
                 <div id="checkboxes-container" class="checkboxes-container">
                     <p>I pledge to...</p>
                     <div>
