--- a/space-2022/1-render-solar-system/index.html
+++ b/space-2022/1-render-solar-system/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <main id="solarSystem" class="main"></main>
-    <script src="index.js"></script>
+    <h1>Solar System</h1>
+    <main id="solarSystem" class="main"> </main>
   </body>
+
+  <script src="index.js"></script>
 </html>
