Stretch goal and styling

--- a/space-2022/1-render-solar-system/index.html
+++ b/space-2022/1-render-solar-system/index.html
@@ -9,8 +9,15 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <h1>Solar System</h1>
+    <h1 class="fixed">✨ Solar System ✨</h1>
     <main id="solarSystem" class="main"> </main>
+    <div id="facts" class="fixed">
+      <h2>Solar System 🌌</h2>
+      <p
+        >Only 8 planets have been discovered in our solar system but there is
+        compelling evidence for a 9th planet.
+      </p>
+    </div>
   </body>
 
   <script src="index.js"></script>
