--- a/space-2022/1-render-solar-system/index.html
+++ b/space-2022/1-render-solar-system/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <h1 class="fixed">✨ Solar System ✨</h1>
+    <h1 class="fixed title">✨ Solar System ✨</h1>
     <main id="solarSystem" class="main"> </main>
     <div id="facts" class="fixed">
       <h2>Solar System 🌌</h2>
