--- a/space-2022/2-galaxy-array/index.html
+++ b/space-2022/2-galaxy-array/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <p id="galaxy"></p>
-    <script src="index.js"></script>
+    <div id="galaxy"></div>
   </body>
+
+  <script src="index.js"></script>
 </html>
